tests/baselines/reference/incompatibleExports1.errors.txt
tests/cases/compiler/incompatibleExports1.ts(4,5): error TS2309: An export assignment cannot be used in a module with other exported elements.
tests/cases/compiler/incompatibleExports1.ts(16,5): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/incompatibleExports1.ts (2 errors) ====
    declare module "foo" { 
        export interface x { a: string } 
        interface y { a: Date }
        export = y;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
     
    declare module "baz" {
        export module a {
            export var b: number;
        }
     
        module c {
            export var c: string;
        }
     
        export = c;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
    